--- a/GiphySample/Podfile
+++ b/GiphySample/Podfile
@@ -11,3 +11,14 @@ target 'GiphySample' do
   pod 'RxCocoa', '5.1.1'
 
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET' # Doing this is because of the Xcode 12.0 warning, "The iOS deployment target 'IPHONEOS_DEPLOYMENT_TARGET' is set to 8.0, but the range of supported deployment target versions is 9.0 to 14.0.99.".
+      # Above deletion action can be removed once we get proper automatic 'IPHONEOS_DEPLOYMENT_TARGET' adjustment support from future versions of Xcode. - 5 Dec 2020
+      # This will remove all deployment target settings from all of the pods in your project, which allows them to simply inherit the project/workspace deployment target that you have specified at the top of your Podfile.
+      # https://www.jessesquires.com/blog/2020/07/20/xcode-12-drops-support-for-ios-8-fix-for-cocoapods/
+    end
+  end
+end
